# pubg-fpsunlocker-zygisk

./: .gitignore  build.gradle  settings.gradle
.run/: Build [_zygisk_libraries_assembleRelease].run.xml  Clean [_zygisk_libraries_clean].run.xml  Copy [_zygisk_libraries_copyZygiskSo].run.xml
zip/: module.prop
zygisk_libraries/: build.gradle
zygisk_libraries/src/main/cpp/: CMakeLists.txt  module.h  unlockfps.cpp
zygisk_libraries/src/main/cpp/zygisk/: module.h
